# PortablePesukarhu

./: .gitignore  .gitmodules  CMakeLists.txt  Common.h  CompileNetTest.bat  EmscriptenCompile.bat  EmscriptenCompileSettings.txt  README.md  TileStateBits_TerrainInfo_explanation.txt  TileStateBits_explanation.txt  build-dependancies.sh  clean-dependancies.sh  ppk.h
Pesukarhu/: Common.h  ppk.h
Pesukarhu/core/: Application.cpp  Application.h  Debug.cpp  Debug.h  Memory.cpp  Scene.cpp  Scene.h  SceneManager.cpp  Timing.cpp  Window.cpp  Window.h
Pesukarhu/core/input/: InputManager.cpp
Pesukarhu/ecs/components/: AnimationData.cpp  AnimationData.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentPool.cpp  ComponentPool.h  Transform.cpp  Transform.h
Pesukarhu/ecs/systems/: Animator.cpp  TransformSystem.cpp  TransformSystem.h
Pesukarhu/graphics/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  Context.cpp  Context.h  Descriptors.cpp  Descriptors.h  Environment.h  MasterRenderer.cpp  MasterRenderer.h  Pipeline.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  StaticMeshRenderer.h  Swapchain.cpp
Pesukarhu/graphics/animation/: Pose.h
Pesukarhu/graphics/renderers/: FontRenderer.cpp  FontRenderer.h  GUIRenderer.cpp  GUIRenderer.h  SkinnedRenderer.cpp  SkinnedRenderer.h  StaticRenderer.cpp  StaticRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h
Pesukarhu/resources/: Animation.h  Font.cpp  Font.h  Image.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  TerrainMaterial.cpp  TerrainMaterial.h  TerrainMesh.cpp  TerrainMesh.h  Texture.cpp
Pesukarhu/ui/: Panel.cpp  Panel.h  TopBarPanel.cpp  UIFactories.cpp  UIFactories.h  UIUtils.cpp  UIUtils.h
Pesukarhu/utils/: Algorithms.cpp  FileUtils.cpp  ID.cpp  MeshGenerator.cpp  MeshGenerator.h  ModelLoading.cpp  ModelLoading.h  pkmath.cpp  pkmath.h
core/: Application.cpp  Application.h  Debug.cpp  Debug.h  Memory.cpp  Memory.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Timing.cpp  Timing.h  Window.cpp  Window.h
core/input/: InputManager.cpp  InputManager.h
ecs/: Entity.h
ecs/components/: AnimationData.cpp  AnimationData.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentPool.cpp  ComponentPool.h  Transform.cpp  Transform.h  UIElemState.h
ecs/systems/: Animator.cpp  Animator.h  CameraUtils.cpp  CameraUtils.h  System.h  TransformSystem.cpp  TransformSystem.h
graphics/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  Descriptors.cpp  Descriptors.h  Environment.h  MasterRenderer.cpp  MasterRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  StaticMeshRenderer.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
graphics/animation/: Pose.h
graphics/renderers/: FontRenderer.cpp  FontRenderer.h  GUIRenderer.cpp  GUIRenderer.h  SkinnedRenderer.cpp  SkinnedRenderer.h  StaticRenderer.cpp  StaticRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h
graphics/shaders/: Shader.cpp  Shader.h
pesukarhu/: Common.h  ppk.h
pesukarhu/core/: Application.cpp  Application.h  Debug.cpp  Debug.h  Memory.cpp  Scene.cpp  Scene.h  SceneManager.cpp  Timing.cpp  Timing.h  Window.cpp  Window.h
pesukarhu/ecs/: Entity.h
pesukarhu/graphics/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  Descriptors.h  Environment.h  MasterRenderer.cpp  MasterRenderer.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  StaticMeshRenderer.h  Swapchain.cpp  Swapchain.h
pesukarhu/resources/: Animation.h  Font.cpp  Font.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  TerrainMaterial.cpp  TerrainMaterial.h  TerrainMesh.cpp  TerrainMesh.h  Texture.cpp  Texture.h
pesukarhu/ui/: Checkbox.cpp  Checkbox.h  GUIButton.cpp  GUIButton.h  GUIElement.h  GUIImage.cpp  GUIImage.h  GUIText.cpp  GUIText.h  InputField.cpp  InputField.h  Panel.cpp  Panel.h  Scrollbar.cpp  Scrollbar.h  Select.cpp  Select.h  TopBarPanel.cpp  TopBarPanel.h  UIFactories.cpp  UIFactories.h  UIUtils.cpp  UIUtils.h
pesukarhu/utils/: Algorithms.cpp  FileUtils.cpp  FileUtils.h  ID.cpp  MeshGenerator.cpp  MeshGenerator.h  ModelLoading.cpp  ModelLoading.h
pk/: Common.h
pk/core/: Application.cpp  Application.h  Debug.cpp  Debug.h  Scene.h  SceneManager.cpp  SceneManager.h  Window.h
pk/graphics/: Buffers.h  Context.cpp  MasterRenderer.cpp  MasterRenderer.h  Renderer.h  Texture.h
pk/utils/: Algorithms.cpp  Algorithms.h  pkmath.h
resources/: Animation.cpp  Animation.h  Font.cpp  Font.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  TerrainMaterial.cpp  TerrainMaterial.h  TerrainMesh.cpp  TerrainMesh.h  Texture.cpp  Texture.h
src/: Common.h  Main.cpp
src/core/: Application.cpp  Application.h  Debug.cpp
src/graphics/: MasterRenderer.h
src_gameClient/: Main.cpp
src_gameClient/net/: Client.h  NetCommon.h
src_gameClient/scenes/: ChatTest.cpp  CreateFactionMenu.cpp  InGame.cpp  InGame.h
src_gameClient/world/: Tile.cpp  Tile.h  World.cpp  World.h
tests/: CMakeLists.txt  build-test.sh  build-web-assets.sh  build-web-test.sh
tests/assets/shaders/opengl/: FontShader.frag  FontShader.vert  GUIShader.frag  GUIShader.vert  SkinnedShader.frag  SkinnedShader.vert  StaticShader.frag  StaticShader.vert  TerrainShader.frag  TerrainShader.vert
tests/src/: BaseScene.cpp  BaseScene.h  Main.cpp  UITestScene.cpp  UITestScene.h
tests/web/: Dockerfile  build-docker.sh  docker-compose.yml  nginx.conf
utils/: Algorithms.cpp  Algorithms.h  FileUtils.cpp  Font.cpp  Font.h  ID.cpp  ID.h  Image.cpp  Image.h  MeshGenerator.cpp  MeshGenerator.h  ModelLoading.cpp  ModelLoading.h  pkmath.cpp  pkmath.h
(+269 files in other folders)
